--- a/gb/15/4/24/n4418951.md
+++ b/gb/15/4/24/n4418951.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ofbisf307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ofbisf307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ofbisf307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ofbisf307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ofbisf307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ofbisf307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ofbisf307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>专访鲍彤：修炼法轮功没有错 镇压者丧心病狂</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/04/1410040312271758-600x400.jpg" />
 <h6>中共前总书记赵紫阳的政治秘书鲍彤先生认为，“真、善、忍”是普世价值，修炼法轮功没有错，迫害法轮功令人愤慨，发动镇压者可以说是丧心病狂。（Renee Chiang／维基百科）
 </h6>
 <hr>
-	<p>【大纪元2015年04月24日讯】（大纪元特约记者常春采访报导）1999年4月25日，上万名<ahref="https://github.com/ofbisf307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员来到北京和平请愿，成为轰动一时的历史性事件，被国际社会赞誉为“中国历史上规模最大、最和平理性的上访活动”。但当年7月份，江泽民悍然发动对法轮功的全面镇压。十六年来，世界各地的法轮功学员年复一年以各种方式来纪念“<ahref="https://github.com/ofbisf307/djy/blob/master/gb/tag/%E5%9B%9B%E4%BA%8C%E4%BA%94.md#1">四二五</a>”，呼吁中共立刻停止对<ahref="https://github.com/ofbisf307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的迫害。在2015年“4.25”纪念日前夕，大纪元特约记者采访了中共前总书记赵紫阳的政治秘书<ahref="https://github.com/ofbisf307/djy/blob/master/gb/tag/%E9%B2%8D%E5%BD%A4.md#1">鲍彤</a>先生。他认为“真、善、忍”是普世价值，修炼法轮功没有错，迫害法轮功令人愤慨，发动镇压者可以说是丧心病狂。</p>
+	<p>【大纪元2015年04月24日讯】（大纪元特约记者常春采访报导）1999年4月25日，上万名<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员来到北京和平请愿，成为轰动一时的历史性事件，被国际社会赞誉为“中国历史上规模最大、最和平理性的上访活动”。但当年7月份，江泽民悍然发动对法轮功的全面镇压。十六年来，世界各地的法轮功学员年复一年以各种方式来纪念“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%9B%E4%BA%8C%E4%BA%94.md#1">四二五</a>”，呼吁中共立刻停止对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的迫害。在2015年“4.25”纪念日前夕，大纪元特约记者采访了中共前总书记赵紫阳的政治秘书<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%B2%8D%E5%BD%A4.md#1">鲍彤</a>先生。他认为“真、善、忍”是普世价值，修炼法轮功没有错，迫害法轮功令人愤慨，发动镇压者可以说是丧心病狂。</p>
 <p><b>记者：</b>1999年4月25日那天，有超过1万名法轮功学员到北京市国家信访局所在的府右街和西安门大街进行和平请愿，希望政府结束不合理的对待，十六年过去了，您能谈一下这件事情当年对中国的影响吗？</p>
-<p><b><ahref="https://github.com/ofbisf307/djy/blob/master/gb/tag/%E9%B2%8D%E5%BD%A4.md#1">鲍彤</a>：</b>那个时候我刚从秦城（监狱）出来不久，大概就是两三年，当时听说在中南海门口有很多法轮功学员，情况我不太清楚，好像之前法轮功在中国是可以自由活动，后来是在天津受到了冤屈，因此法轮功学员就到北京来请愿。</p>
+<p><b><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%B2%8D%E5%BD%A4.md#1">鲍彤</a>：</b>那个时候我刚从秦城（监狱）出来不久，大概就是两三年，当时听说在中南海门口有很多法轮功学员，情况我不太清楚，好像之前法轮功在中国是可以自由活动，后来是在天津受到了冤屈，因此法轮功学员就到北京来请愿。</p>
 <p>但是我听说，好像一开始的时候，朱镕基总理派中办的人告诉请愿的人说，中央没有说你们是非法的、你们也不要把这件事情当作一回事、你们好好去修炼身体，中央不会干扰你们的。我记得在《人民日报》上登过，至少是我看到过。当然我年纪大了，我可能记得不是很清楚，也可能记错。但是我想总的意思是不会错的，就是法轮功要求自由活动，朱镕基作为中央常委、作为国务院总理，他派人来宣布，请大家安心，没有这回事。我当时想这个问题应该解决了，相安无事。请愿也是正常，而回答，我认为也是很好。</p>
 <p>没想到，过了几天以后，好像有一个人姓江，叫江泽民，他那个时候是中共总书记，他震怒了，觉得这个事情不得了、不像话，“怎么有万把人跑出来，我都不知道，这还了得，这中国不天下大乱了”。后来人大常委通过一个法律，大概是根据江泽民的提议。江给指示的人加班加点，就搞了一个什么“取缔x教”的法。荒唐！中国的法律有什么根据说哪一个东西是邪的？中国的法律只能说哪一种行为是合法的、哪一种行为是不合法的，就是说，有某种行为的人，是要受到法律制裁；不做违法活动的人，一定受到法律保护的，这才是中国的法律。因为你定一个东西、一个法律，叫做“取缔x教”，那么有些教就变成邪教了，天下有这种事情吗？我认为荒唐！</p>
 <p>后来官方媒体报导说，这个法轮功里边有人“自杀”、“自焚”，因此他就是x教。我听了这个话以后觉得很奇怪。据我所知，世界一切政治组织、社会团体里边，大概自杀的人最多的应该是中国共产党。它早在六十年以前，当然那个时候，也可能五十、四十年以前，那个时候就有中共政治局委员高岗自杀。后来文化大革命当中，许许多多高级干部自杀。我看这个自杀应该是世界之冠。那么，这样一个党是不是邪党啊、是不是应该取缔呀？所以把一个组织宣布为邪，这个没根据。</p>
@@ -36,41 +36,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/4/21/n4416946.md#1">陆官王宪魁南投行 法轮功抗议如影随形</a></li>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/4/22/n4417308.md#1">第23名信仰者被虐死 辽宁女监再添命案</a></li>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/4/23/n4417937.md#1">不会闯红灯的人，怎么会“围攻”？</a></li>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/4/23/n4418006.md#1">《马三家来信》连载4：第一章 新收（2）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/21/n4416946.md#1">陆官王宪魁南投行 法轮功抗议如影随形</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/22/n4417308.md#1">第23名信仰者被虐死 辽宁女监再添命案</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/23/n4417937.md#1">不会闯红灯的人，怎么会“围攻”？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/23/n4418006.md#1">《马三家来信》连载4：第一章 新收（2）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ofbisf307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11704965.md#1" target="_blank">宁静：《花为媒》被中共禁播十五年只为淫乱华夏</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042647.md#1" target="_blank">林辉：咏春拳文革遭遇是武林劫难的缩影</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/22/n3688691.md#1" target="_blank">不再对强盗说“谢谢”</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/16/n12885150.md#1">【未解之谜】报恩的白牛 印度男孩五次转生</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/15/n12880731.md#1">【馨香雅句】王羲之的书法老师竟是她</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/18/n12887969.md#1">【小宇宙传说】宇宙中最大谜题：什么是时间？</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/20/n12891592.md#1">【未解之谜】轰动世界的巴克斯特实验</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/2/26/n12777808.md#1">《三国演义》中的高人：神卜、神医和隐士</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903156.md#1">【横河观点】美国媒体人如何吃中共的嘴软</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898998.md#1">【预告】专访程晓农：美中海上对抗升级（7）</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901519.md#1">【远见快评】特斯拉风暴揭秘：中共要这三样</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901440.md#1">【内幕】美上将回忆 房峰辉落马前的会面</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901453.md#1">沈舟：俄罗斯撤军 辽宁号再被推上前台</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12898706.md#1">宁静耿直爆料：邓超曾被某制片人潜规则</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901477.md#1">杜汶泽脸书宣布：旗下网台永久聘用蔡玉玲</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12901216.md#1">赵丽颖冯绍峰离婚登热搜 21亿点阅量被消失</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12899061.md#1">频被吐槽体形壮硕 蒋欣大方回应身材争议</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899738.md#1">赵丽颖、冯绍峰宣布离婚 孩子共同抚养</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/17/6/4/n9224895.md#1">国际汇款最划算的方式是什么？（多国适用）（更新）</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12897713.md#1">心律不整5大危害 可致心肌梗塞？食疗和穴位改善</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12900193.md#1">微波炉最危险不是辐射 做错2件事当心受伤、吃进毒素</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899914.md#1">跑步时被熊盯上 美国男子用这一招惊险脱身</a></li>
-<li><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/21/n12894418.md#1">500度以下近视眼能痊愈？2招改善视力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970524.md#1">台湾目前有4万多居家检疫者 双北市占近半数</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970106.md#1">北市寻陈先生 北京返台失联 手机空号留假地址</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970667.md#1">任志强视频热传 批中共体制烂透 吁国人推墙</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/24/n11970670.md#1">华春莹找上美国务院发言人辩论 又遭漏底</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11973870.md#1">辛龙灵堂伴妻5小时 双手合十离开未受访</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/14/n11939926.md#1">现世报：危机窥伺中得恩报 毫无预警下遭恶报</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11967225.md#1">成规模毁灭事件中的悬案 明朝王恭厂大爆炸</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ofbisf307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ofbisf307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/4/24/n4418951.htm">专访鲍彤：修炼法轮功没有错 镇压者丧心病狂</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/4/24/n4418951.htm">专访鲍彤：修炼法轮功没有错 镇压者丧心病狂</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ofbisf307/djy/blob/master/gb/15/4/24/n4418951.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ofbisf307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ofbisf307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ofbisf307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ofbisf307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofbisf307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/15/4/24/n4418951.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
